# agentwire-backend

./: .env.example  README.md  generate_endpoints_comparison.md  main.py  pyproject.toml  read.md  run.py
agents/editorial_reviewer/: __init__.py  agent.py  prompts.py
agents/news_curator/: __init__.py  agent.py  prompts.py
agents/technical_writer/: __init__.py  agent.py  prompts.py
config/: logger.py  settings.py
graph/: graph.py  state.py
services/: database.py  llm.py  prompt_manager.py
tools/: guardian_search.py  tavily_search.py
