[tool.poetry]
name = "agentwire"
version = "1.0.0"
description = "Autonomous Multi-Agent Blog Generation Engine using LangGraph and FastAPI"
authors = ["Siddharth Rai <raisiddharth1024@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.135.1"
uvicorn = "^0.41.0"
langgraph = "^1.0.10"
langchain-groq = "^1.1.2"
langchain-core = "^1.2.16"
pydantic-settings = "^2.13.1"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.2.1"
sentry-sdk = "^2.0.0"
openpyxl = "^3.1.5"
pandas = "^3.0.1"
opik = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
